# Riverbraid-Lite

./: .anchor  .gitignore  .gitmodules  AUTHORITY.md  CMakeLists.txt  CMakeLists_temp.txt  CONTRIBUTING.md  MERKLE_ROOT  Makefile  README.md  SHA256SUMS  TRUTH.SEAL  VERSION.txt  a.out  audit-cluster.mjs  check-alignment.mjs  cluster-manifest.json  cluster.audit.json  cluster.manifest.json  constitution.snapshot.json  constitution.threshold.json  custodian.mjs  enclave.mjs  gate.mjs  gateway_v1_4.py  generate-keys.mjs  generate-snapshot.mjs  genesis_gen  genesis_gen.c  genesis_v2.json  heartbeat.mjs  identity.contract.json  index.js  ledger.root  package-lock.json  package.json  pico_sdk_import.cmake  protocol.steps  record-ledger.mjs  report-generator.mjs  (+14 more)
.riverbraid/: authority.json
audit-ledger/: audit_2026-03-08T02-13-34-090Z.json  audit_2026-03-08T02-39-10-906Z.json  audit_2026-03-08T02-41-50-573Z.json
build_tests/: CMakeCache.txt  Makefile  cmake_install.cmake  unit_tests
cluster/Riverbraid-Core/: .gitignore  ARCHITECTURE.md  BUILD-MANIFEST-v1.1.md  CLUSTER_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-GOVERNANCE.md  README.md  RELEASE_NOTES.md  RESEARCH_SPEC.md  SECURITY.md  SHA256SUMS  TRUTH.md  audit-ledger.js  identity.contract.json  package-lock.json  package.json  pyproject.toml  release-manifest-1.0.0.json  tsconfig.json  verify-vectors.cjs  vitest.config.ts
cluster/Riverbraid-Core/.github/workflows/: ci.yml
cluster/Riverbraid-Core/PROOFS/: manifest-v1.3.0-verified.json
cluster/Riverbraid-Core/src/: ascii.js  index.js  invariants.js  main.ts  merkle.mjs
cluster/Riverbraid-Core/src/core/: pureCapacityGate.ts
cluster/Riverbraid-Core/src/riverbraid/: __init__.py
cluster/Riverbraid-Core/src/riverbraid/core/: __init__.py  metrics.py
cluster/Riverbraid-Core/src/scaffolding/: anchor.ts  ledger.ts
cluster/Riverbraid-Core/src/utils/: braidMechanics.ts  canonicalSerialize.ts
cluster/Riverbraid-Core/tests/: core.test.ts  governance.test.ts  ledger.test.ts  signal.test.js  test_metrics.py
constitutional/: DURABILITY.md  LAYER-INVARIANTS.md  NEUTRAL-LAYERS.md  RESILIENCE.md  SCOPE.md  SEAL-RECORD.md  SURVIVABILITY.md
docs/: ARCHITECTURE.md  AUDIT_v1.4.md  DESIGN.md  logic.md
include/: crypto_engine.h  golden_decision_table.inc  integrity.h  persistence.h  rb_cluster_state.h  rb_sha256.h  riverbraid_lite.h  riverbraid_v1_4.h
ledger/: PHASE0_LOG.final
(+84 files in other folders)
