cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(riverbraid_v1_4 C CXX ASM)
set(CMAKE_C_STANDARD 11)

pico_sdk_init()
add_executable(riverbraid_core core/src/rb_reseal_genesis.c)
target_include_directories(riverbraid_core PRIVATE core/include)
target_link_libraries(riverbraid_core pico_stdlib)
pico_add_extra_outputs(riverbraid_core)
