cmake_minimum_required(VERSION 3.10)
project(RiverbraidLite VERSION 1.0.0 LANGUAGES C CXX)
# PHASE 15 INTEGRITY ANCHOR: STATIONARY_STATE_V2_20260425-092050
# ROLE: embedded-port-symmetry
# CLAIM_BOUNDARY: infrastructure-classification-only
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(riverbraid_lite INTERFACE)