[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "riverbraid-core"
version = "1.3.0"
description = "Deterministic capacity control substrate for AI and automation systems"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
